# ai-ssu-bot

./: .dockerignore  .gitignore  README.md  docker-compose.yml  fastapi.Dockerfile  openapi.yaml  requirements.md
.github/workflows/: ci.yml
backend/: pyproject.toml  start.sh
backend/app/: emb_model.py  main.py  search.py  upd_qdrant.py
backend/app/api/: depends.py  health_api.py  ssu_bot_api.py
backend/app/core/: config.py  database.py
backend/app/core/exception/: faq_exception.py  message_exception.py  session_exception.py
backend/app/model/: faq.py  message.py  session.py
backend/app/repository/: faq_repository.py  message_repository.py  session_repository.py
backend/app/schema/: faq_schema.py  messageSchema.py  message_schema.py  session_schema.py
backend/app/schema/dto/: send_query_dto.py
backend/app/service/: faq_service.py  llm_client.py  message_service.py  session_service.py
backend/data/: sgu_prepared.json
backend/test/: conftest.py  test_faq_api.py  test_main.py  test_message_api.py  test_session_api.py
data/: data_ssu.json  sgu_prepared.json  sk1.py  text_cleaner.py
frontend/src/: App.css  App.js
postgresql_scripts/: init.sql
